<package format="3">
  <name>erp_driver</name>
  <version>0.0.1</version>
  <description>ERP-42 ROS2 driver</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>erp_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

